{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 544,
  "lineage": "547205e2-f5af-1996-e594-f0968e2751ea",
  "resources": [
    {
      "module": "module.Loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "MyLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:857017732506:loadbalancer/app/My-LoadBalancer/678c686f7fa7977d",
            "arn_suffix": "app/My-LoadBalancer/678c686f7fa7977d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "My-LoadBalancer-1046077906.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:857017732506:loadbalancer/app/My-LoadBalancer/678c686f7fa7977d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "My-LoadBalancer",
            "security_groups": [
              "sg-0b1beaa055d771229"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03fde6b5013ebc2c7"
              },
              {
                "subnet_id": "subnet-061d81232c8a35874"
              },
              {
                "subnet_id": "subnet-0855c4b72eb492d14"
              }
            ],
            "subnets": [
              "subnet-03fde6b5013ebc2c7",
              "subnet-061d81232c8a35874",
              "subnet-0855c4b72eb492d14"
            ],
            "vpc_id": "vpc-0d026da227953f6ff",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.SUBNETS.aws_subnet.MyVPC_public_subnet",
            "module.SUBNETS.data.aws_availability_zones.available",
            "module.SUBNETS.random_shuffle.az_list",
            "module.VPC.aws_vpc.MyVPC",
            "module.VPC.random_integer.random",
            "module.SECGRP.aws_security_group.MySG"
          ]
        }
      ]
    },
    {
      "module": "module.Loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "MyLG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "FirstL",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:857017732506:listener/app/My-LoadBalancer/678c686f7fa7977d/cee5381385077309",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:857017732506:targetgroup/First-TG/98ee00621a04c279",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:857017732506:listener/app/My-LoadBalancer/678c686f7fa7977d/cee5381385077309",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:857017732506:loadbalancer/app/My-LoadBalancer/678c686f7fa7977d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Loadbalancer.aws_lb.MyLB",
            "module.Loadbalancer.aws_lb_target_group.MyTG",
            "module.SECGRP.aws_security_group.MySG",
            "module.SUBNETS.aws_subnet.MyVPC_public_subnet",
            "module.SUBNETS.data.aws_availability_zones.available",
            "module.SUBNETS.random_shuffle.az_list",
            "module.VPC.aws_vpc.MyVPC",
            "module.VPC.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.Loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "MyTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "FirstTG",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:857017732506:targetgroup/First-TG/98ee00621a04c279",
            "arn_suffix": "targetgroup/First-TG/98ee00621a04c279",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:857017732506:targetgroup/First-TG/98ee00621a04c279",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "First-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d026da227953f6ff"
          },
          "dependencies": [
            "module.VPC.aws_vpc.MyVPC",
            "module.VPC.random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.SECGRP",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MySG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857017732506:security-group/sg-0b1beaa055d771229",
            "description": "Security Group for public access.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1beaa055d771229",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "PublicSG",
            "name_prefix": "",
            "owner_id": "857017732506",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My  securitygroup"
            },
            "tags_all": {
              "Name": "My  securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d026da227953f6ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.MyVPC",
            "module.VPC.random_integer.random"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "RDS",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857017732506:security-group/sg-0f427ac680ba404d2",
            "description": "Security Group for rds.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f427ac680ba404d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.124.0.0/16"
                ],
                "description": "rds access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDS_SG",
            "name_prefix": "",
            "owner_id": "857017732506",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My  securitygroup"
            },
            "tags_all": {
              "Name": "My  securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d026da227953f6ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.MyVPC",
            "module.VPC.random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.SUBNETS",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "MyPrivateRoutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857017732506:route-table/rtb-0cb1a8f1fa38c1c71",
            "default_route_table_id": "rtb-0cb1a8f1fa38c1c71",
            "id": "rtb-0cb1a8f1fa38c1c71",
            "owner_id": "857017732506",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "MyPrivateRoutetable"
            },
            "tags_all": {
              "Name": "MyPrivateRoutetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d026da227953f6ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.random_integer.random",
            "module.VPC.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.SUBNETS",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MyIg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857017732506:internet-gateway/igw-0fc1c9fafd7b1793d",
            "id": "igw-0fc1c9fafd7b1793d",
            "owner_id": "857017732506",
            "tags": {
              "Name": "MyIg"
            },
            "tags_all": {
              "Name": "MyIg"
            },
            "vpc_id": "vpc-0d026da227953f6ff"
          },
          "dependencies": [
            "module.VPC.aws_vpc.MyVPC",
            "module.VPC.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.SUBNETS",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MyPublicRoutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857017732506:route-table/rtb-0c7db43c1b4683731",
            "id": "rtb-0c7db43c1b4683731",
            "owner_id": "857017732506",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc1c9fafd7b1793d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyPublicRoutetable"
            },
            "tags_all": {
              "Name": "MyPublicRoutetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d026da227953f6ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.SUBNETS.aws_internet_gateway.MyIg",
            "module.VPC.aws_vpc.MyVPC",
            "module.VPC.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.SUBNETS",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyPublicSubnetAssoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012e620582a6cbc1c",
            "route_table_id": "rtb-0c7db43c1b4683731",
            "subnet_id": "subnet-0855c4b72eb492d14"
          },
          "dependencies": [
            "module.SUBNETS.data.aws_availability_zones.available",
            "module.SUBNETS.random_shuffle.az_list",
            "module.VPC.aws_vpc.MyVPC",
            "module.VPC.random_integer.random",
            "module.SUBNETS.aws_internet_gateway.MyIg",
            "module.SUBNETS.aws_route_table.MyPublicRoutetable",
            "module.SUBNETS.aws_subnet.MyVPC_public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed387f3c1dccda27",
            "route_table_id": "rtb-0c7db43c1b4683731",
            "subnet_id": "subnet-061d81232c8a35874"
          },
          "dependencies": [
            "module.SUBNETS.aws_internet_gateway.MyIg",
            "module.SUBNETS.aws_route_table.MyPublicRoutetable",
            "module.SUBNETS.aws_subnet.MyVPC_public_subnet",
            "module.SUBNETS.data.aws_availability_zones.available",
            "module.SUBNETS.random_shuffle.az_list",
            "module.VPC.aws_vpc.MyVPC",
            "module.VPC.random_integer.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07021b1ad5e0a497d",
            "route_table_id": "rtb-0c7db43c1b4683731",
            "subnet_id": "subnet-03fde6b5013ebc2c7"
          },
          "dependencies": [
            "module.SUBNETS.aws_route_table.MyPublicRoutetable",
            "module.SUBNETS.aws_subnet.MyVPC_public_subnet",
            "module.SUBNETS.data.aws_availability_zones.available",
            "module.SUBNETS.random_shuffle.az_list",
            "module.VPC.aws_vpc.MyVPC",
            "module.VPC.random_integer.random",
            "module.SUBNETS.aws_internet_gateway.MyIg"
          ]
        }
      ]
    },
    {
      "module": "module.SUBNETS",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MyVPC_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857017732506:subnet/subnet-0dedbcff0f7198382",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.124.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dedbcff0f7198382",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "857017732506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyVPC_private_subnet_1"
            },
            "tags_all": {
              "Name": "MyVPC_private_subnet_1"
            },
            "vpc_id": "vpc-0d026da227953f6ff"
          },
          "dependencies": [
            "module.SUBNETS.data.aws_availability_zones.available",
            "module.SUBNETS.random_shuffle.az_list",
            "module.VPC.aws_vpc.MyVPC",
            "module.VPC.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857017732506:subnet/subnet-06f6856a25ead4132",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.124.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f6856a25ead4132",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "857017732506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyVPC_private_subnet_2"
            },
            "tags_all": {
              "Name": "MyVPC_private_subnet_2"
            },
            "vpc_id": "vpc-0d026da227953f6ff"
          },
          "dependencies": [
            "module.SUBNETS.random_shuffle.az_list",
            "module.VPC.aws_vpc.MyVPC",
            "module.VPC.random_integer.random",
            "module.SUBNETS.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857017732506:subnet/subnet-0bfcfabfcb0859035",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.124.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfcfabfcb0859035",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "857017732506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyVPC_private_subnet_3"
            },
            "tags_all": {
              "Name": "MyVPC_private_subnet_3"
            },
            "vpc_id": "vpc-0d026da227953f6ff"
          },
          "dependencies": [
            "module.SUBNETS.data.aws_availability_zones.available",
            "module.SUBNETS.random_shuffle.az_list",
            "module.VPC.aws_vpc.MyVPC",
            "module.VPC.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.SUBNETS",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MyVPC_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857017732506:subnet/subnet-0855c4b72eb492d14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.124.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0855c4b72eb492d14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "857017732506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyVPC_public_subnet_1"
            },
            "tags_all": {
              "Name": "MyVPC_public_subnet_1"
            },
            "vpc_id": "vpc-0d026da227953f6ff"
          },
          "dependencies": [
            "module.SUBNETS.data.aws_availability_zones.available",
            "module.SUBNETS.random_shuffle.az_list",
            "module.VPC.aws_vpc.MyVPC",
            "module.VPC.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857017732506:subnet/subnet-061d81232c8a35874",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.124.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061d81232c8a35874",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "857017732506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyVPC_public_subnet_2"
            },
            "tags_all": {
              "Name": "MyVPC_public_subnet_2"
            },
            "vpc_id": "vpc-0d026da227953f6ff"
          },
          "dependencies": [
            "module.SUBNETS.data.aws_availability_zones.available",
            "module.SUBNETS.random_shuffle.az_list",
            "module.VPC.aws_vpc.MyVPC",
            "module.VPC.random_integer.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857017732506:subnet/subnet-03fde6b5013ebc2c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.124.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fde6b5013ebc2c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "857017732506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyVPC_public_subnet_3"
            },
            "tags_all": {
              "Name": "MyVPC_public_subnet_3"
            },
            "vpc_id": "vpc-0d026da227953f6ff"
          },
          "dependencies": [
            "module.VPC.aws_vpc.MyVPC",
            "module.VPC.random_integer.random",
            "module.SUBNETS.data.aws_availability_zones.available",
            "module.SUBNETS.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:857017732506:vpc/vpc-0d026da227953f6ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.124.0.0/16",
            "default_network_acl_id": "acl-0162dd80ded6f73fe",
            "default_route_table_id": "rtb-0cb1a8f1fa38c1c71",
            "default_security_group_id": "sg-06cf35298a35148c4",
            "dhcp_options_id": "dopt-02b3fff362acb9f58",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d026da227953f6ff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cb1a8f1fa38c1c71",
            "owner_id": "857017732506",
            "tags": {
              "Name": "MyVPC-16"
            },
            "tags_all": {
              "Name": "MyVPC-16"
            }
          },
          "dependencies": [
            "module.VPC.random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}